프로젝트 구조 정리 및 로그인 요청

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,15 +1,14 @@
-# ?? ??
 server.port=8081
 
-# PostgreSQL ?????? ??
-spring.datasource.url=jdbc:postgresql://localhost:5432/mydatabase
-spring.datasource.username=myuser
-spring.datasource.password=mypassword
+spring.datasource.url=jdbc:postgresql://localhost:5432/planify
+spring.datasource.username=postgres
+spring.datasource.password=1203
 spring.datasource.driver-class-name=org.postgresql.Driver
 
-# Hibernate JPA ??
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+# Hibernate ??
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 spring.mvc.view.prefix=/WEB-INF/views/
 spring.mvc.view.suffix=.jsp
